# model-generator

./: Cargo.toml  README.md  build.rs  rustfmt.toml
common/: Cargo.toml
common/src/: bsp.rs  common_for_twisty_puzzles.rs  contour.rs  lib.rs  matrix.rs  model.rs  points2d.rs  points3d.rs  solid.rs  (+1 more)
dxf_generator/: Cargo.toml  rustfmt.toml
gear_tester/: Cargo.toml
gears/: Cargo.toml  build.rs  rustfmt.toml
src/: banana_creator.rs  brake_handle_creator.rs  contour.rs  cube_creator.rs  decaminx_creator.rs  decaminx_o_creator.rs  disk_creator.rs  house_creator.rs  lapis4_creator.rs  main.rs  matrix.rs  model.rs  nested_cube_creator.rs  octopus_creator.rs  osnik_creator.rs  part_creator.rs  points2d.rs  points3d.rs  pyra5_creator.rs  semiosnik_creator.rs  solid.rs  sphere_creator.rs  sun_kitty_creator.rs  tree_creator.rs
stl_generator/: Cargo.toml  build.rs  rustfmt.toml
stl_generator/.cargo/: config.toml
stl_generator/src/: assemble_gear_creator.rs  axle_tool_creator.rs  banana_creator.rs  bean_creator.rs  beard_of_stars_creator.rs  beggar_creator.rs  beginner_jumbler_creator.rs  braid_creator.rs  bubbloid_creator.rs  cannyminx_creator.rs  cobblestone_hexaminx_creator.rs  cobblestone_octo_creator.rs  cobblestone_prism_creator.rs  cobblestone_skewb_creator.rs  confusing_creator.rs  crazy_diamond_cube_creator.rs  cube_creator.rs  cube_creator_51.rs  decaminx_big_creator.rs  decaminx_creator.rs  decaminx_o_creator.rs  disk_creator.rs  errors.rs  flower_hybrid_creator.rs  fth_creator.rs  galla_trip_creator.rs  ghost_prism_creator.rs  ghost_redi_creator.rs  gl_utils.rs  gl_window.rs  gripshift_creator.rs  hood_cube_creator.rs  hyper_creator.rs  jigsaw_creator.rs  knot5_creator.rs  luna_minx_plus_creator.rs  main.rs  mid_redi_creator.rs  nested_cube_creator.rs  octo_mixup_creator.rs  (+30 more)
(+18 files in other folders)
