[package]
name = "stl_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]


[dependencies]
winit = { version = "0.28.1", default-features = false }
glutin = { path = "../glutin/glutin", default-features = false }
glutin-winit = { path = "../glutin/glutin-winit", default-features = false }
raw-window-handle = "0.5.0"
png = { version = "0.17.6", optional = true }
rand = "0.8.5"
serde = {version="1.0.167", features = ["derive"]}
serde_json = "1.0.100"
clap = { version = "4.3.19", features = ["derive"] }
stl_io = "0.7.0"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"

[profile.release]
strip = "debuginfo"
