[package]
name = "stl_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version="1.0.167", features = ["derive"]}
serde_json = "1.0.100"
clap = { version = "4.3.19", features = ["derive"] }
stl_io = "0.7.0"
fxhash = "0.2.1"
dxf = { version = "0.5.0", features = ["serialize"] }
num = "0.4.1"
tinyvec = "1.8.0"
lazy_static = "1.5.0"
common = { path = "../common" }
gears = { path = "../gears" }
winapi = {version = "0.3.9", features=["dwmapi", "errhandlingapi", "libloaderapi", "synchapi", "winbase", "winuser"]}
gl = "0.6.0"

[profile.release]
lto = false
